feat: setup components test - Add components test for register-fund-source, record-journal-entries enpoints
